--- a/css/our-exhibitions.css
+++ b/css/our-exhibitions.css
@@ -3,7 +3,7 @@ p {
   line-height: 17px;
 }
 
-.main--our-exhibitions {
+.div--our-exhibitions {
   padding: 20px;
   display: grid;
   gap: 20px;
@@ -64,7 +64,7 @@ h2 {
 }
 
 @media screen and (min-width: 730px) {
-  .main--our-exhibitions {
+  .div--our-exhibitions {
     grid-template-columns: 1fr 1fr;
   }
 
